<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Lab 1 Exercise 2</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="convert">Convert</string>
    <string name="from">from</string>
    <string name="to">to</string>
    <string name="output">Output</string>
    <string name="celsius">Celsius</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="kelvin">Kelvin</string>
</resources>
